--- a/inst/rmarkdown/templates/preregRS/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/preregRS/skeleton/skeleton.Rmd
@@ -91,21 +91,21 @@ __This is__ a Rmd-template for protocols and reporting of systematic reviews and
 
 The template is __aimed at__
 
-* guiding the process of planning systematic review / meta-analyses
+* guiding the process of planning systematic review/meta-analyses
 * providing a form for preregistration (enter your text, export as standalone HTML or PDF, upload as preregistration to any preferred repository)
 
-We are aware that MARS targets aspects of reporting after the systematic review / meta-analysis is completed rather than decisions and reasoning in the planning phase as PRISMA-P and PROSPERO. MARS nevertheless provides a good framework to determine crucial points for systematic reviews/ meta-analyses to be addressed as early as in the planning phase.
+We are aware that MARS targets aspects of reporting after the systematic review/meta-analysis is completed rather than decisions and reasoning in the planning phase as PRISMA-P and PROSPERO. MARS nevertheless provides a good framework to determine crucial points for systematic reviews/ meta-analyses to be addressed as early as in the planning phase.
 </div>
 
   
-_Standards have been partially adapted. Click 'show changes' to see changes and reasons for change._  
+_Standards have been partially adapted. Click 'show changes' to see changes and reasons for the change._  
 
 <button data-toggle="collapse" data-target="#changes">show changes</button>
 <div id="changes" class="collapse">
 | Standard |  Implemented change  | Reason                      |
 |:---------|:---------------------|:----------------------------|
-| MARS |  Left out paper section "Abstract"  |  An abstract is important for reporting, however not, for planning and registering. |
-| MARS |  Left out paper section "Results" and parts of "Discussion"  |  Specifications on how to report results is important for reporting, however not, for planning and registering. Prospective information on how results will be computed/ synthesized is preserved. |
+| MARS |  Left out the paper section "Abstract"  |  An abstract is important for reporting, however not, for planning and registering. |
+| MARS |  Left out the paper section "Results" and parts of "Discussion"  |  Specifications on how to report results is important for reporting, however not, for planning and registering. Prospective information on how results will be computed/ synthesized is preserved. |
 | MARS | Left out "Protocol: List where the full protocol can be found" | This form serves as a preregistration form, a protocol will be generated later in the research process. |
 | MARS | Left out "Give the place where the synthesis is registered and its registry number, if registered" | This template serves as a preregistration form. |
 |  PROSPERO  |  Left out non-mandatory fields or integrated them into the mandatory fields.  |  Avoiding too detailed specifications. All relevant information will be integrated. |
