enable numbered sections in pdf

--- a/inst/rmarkdown/templates/preregRS/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/preregRS/skeleton/skeleton.Rmd
@@ -23,6 +23,7 @@ output:
     toc: yes
     toc_depth: '2'
     latex_engine: xelatex # or lualatex
+    number_sections: yes
 ---
 
 ```{css, echo=FALSE}
